--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="horizontal-form">
                     <form action="#">
                         <div class="horizontal-form__inside">
-                            <div class="form-group"><input type="tel" class="form-contol mask" placeholder="+7 ("></div>
+                            <div class="form-group"><input type="tel" required class="form-contol mask" placeholder="+7 ("></div>
                             <div class="form-group"><button class="btn w-100-sm" type="button">Начать подбор</button></div>
                         </div>
                     </form>
@@ -291,7 +291,7 @@
                         <p class="d-sm-block d-none">В точном соответствии с вашими требованиями</p>
                         <div class="contacts-block__form">
                             <form action="#">
-                                <div class="form-group"><input type="tel" class="form-contol mask" placeholder="+7 ("></div>
+                                <div class="form-group"><input type="tel" required class="form-contol mask" placeholder="+7 ("></div>
                                 <div class="form-group"><button class="btn w-100" type="button">Начать подбор</button></div>
                             </form>
                         </div>
