--- a/socketify/telegram-2.html
+++ b/socketify/telegram-2.html
@@ -27,31 +27,17 @@
 
     </header>
     <main class="main">
-      <h1>Страницы</h1>
-      <style>
-        .map-list{
-            margin: 30px 0;
-        }
-        .map-list li{
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-      </style>
-      <ul class="map-list">
-        <li><a href="login.html">login</a></li>
-        <li><a href="map.html">map</a></li>
-        <li><a href="profile.html">profile</a></li>
-        <li><a href="recovery.html">recovery</a></li>
-        <li><a href="recovery-2.html">recovery-2</a></li>
-        <li><a href="registration.html">registration</a></li>
-        <li><a href="telegram.html">telegram</a></li>
-        <li><a href="telegram-2.html">telegram-2</a></li>
-        <li><a href="sockets.html">sockets</a></li>
-        <li><a href="socket.html">socket</a></li>
-        <li><a href="orders.html">orders</a></li>
-        <li><a href="order.html">order</a></li>
-       </ul>
         
+    <div class="row">
+        <div class="col-12">
+
+            <h1>Надішліть цей код нашому телеграм-боту телеграм-боту Надішліть цей код нашому телеграм-боту Надішліть цей код нашому телеграм-боту</h1>
+            <h3>05-63-23-89</h3>
+            <br>
+            <p><img src="https://www.imgonline.com.ua/examples/bee-on-daisy.jpg" alt="" class="img-fluid"></p>
+            <a href="https://t.me/socketify_bot">Відкрити телеграм</a>
+        </div>
+    </div>
 
     </main>
 </div>
@@ -87,7 +73,7 @@
     smartlook('init', '5ce60123128bfa9c49aa90660f5a1870bb728ea3', { region: 'eu' });
 </script>
 
-<input type="hidden" id="userid" name="userid" value="None"/>
+<input type="hidden" id="userid" name="userid" value="16"/>
 
 </body>
 </html>
