--- a/CBD/delivery.html
+++ b/CBD/delivery.html
@@ -113,48 +113,70 @@
         <!-- /header -->
         <div class="container content_padding">
             <!-- breadcrumb -->
-            <ul class="breadcrumb">
+            <ul class="breadcrumb breadcrumb_margin">
                 <li class="breadcrumb__item"><a href="#" class="breadcrumb__link">Главная</a></li>
-                <li class="breadcrumb__item">Возврат и обмен</li>
+                <li class="breadcrumb__item">Доставка и оплата</li>
             </ul>
             <!-- /breadcrumb -->
-            <div class="title_size-lg title_margin-bottom-sm d-lg-none">Возврат и обмен</div>
+            <div class="title_size-lg delivery__title">Доставка и оплата</div>
+            <div class="row delivery-advantages">
+                <div class="col-xl-4 col-md-6">
+                    <div class="delivery-advantages-item d-flex">
+                        <div class="delivery-advantages-item__icon bg-light"><img src="img/icons/delivery-advantages-1.svg" alt="" style="margin-left: -0.7rem;"></div>
+                        <div class="delivery-advantages-item__text">
+                            <div class="delivery-advantages-item__title">Выгодная доставка точно в срок</div>
+                            <p>От 3-х часов по Москве и до 14-ти дней по всей России и СНГ</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <div class="delivery-advantages-item d-flex">
+                        <div class="delivery-advantages-item__icon bg-light"><img src="img/icons/delivery-advantages-2.svg" alt=""></div>
+                        <div class="delivery-advantages-item__text">
+                            <div class="delivery-advantages-item__title">Множество способов оплаты</div>
+                            <p>Вы можете оплатить наличными, банковской картой, Apple Pay, Google Pay</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6">
+                    <div class="delivery-advantages-item d-flex">
+                        <div class="delivery-advantages-item__icon bg-light"><img src="img/icons/delivery-advantages-3.svg" alt=""></div>
+                        <div class="delivery-advantages-item__text">
+                            <div class="delivery-advantages-item__title">Удобство в получении посылок</div>
+                            <p>Большой выбор пунктов выдачи заказов по всей России</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="d-lg-flex">
                 <!-- sidebar -->
                 <div class="sidebar">
                     <ul class="sidebar-nav sidebar-nav_tablet-bordered">
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Пользовательское соглашение</a></li>
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Политика конфиденциальности</a></li>
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link active">Возврат и обмен</a></li>
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Авторские права</a></li>
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Отказ от ответственности</a></li>
-                        <li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Использование Cookie</a></li>
+                        <li class="sidebar-nav__item sidebar-nav__item_margin"><a href="#" class="sidebar-nav__link active">Оплата</a></li>
+                        <li class="sidebar-nav__item sidebar-nav__item_margin"><a href="#" class="sidebar-nav__link">Доставка СДЕК</a></li>
+                        <li class="sidebar-nav__item sidebar-nav__item_margin"><a href="#" class="sidebar-nav__link">Доставка DPD</a></li>
+                        <li class="sidebar-nav__item sidebar-nav__item_margin"><a href="#" class="sidebar-nav__link">Доставка Почтой России</a></li>
                     </ul>
-
                 </div>
                 <!-- /sidebar -->
                 <!-- main -->
                 <main class="main main_padding-md">
-                    <div class="title_size-lg title_margin-bottom-sm d-none d-lg-block">Возврат и обмен</div>
+                    <div class="title_size-smd delivery__title_margin title_margin-bottom-sm text-semibold_md">Мы предлагаем различные способы оплаты ваших заказов.</div>
+                    <div class="col-md-10 col-lg-12">
+                        <p>Все способы оплаты безопасны и надежны. Неважно, какой способ оплаты вы выберете, вам не нужно беспокоиться, поскольку мы предприняли все необходимые шаги, чтобы сделать процесс оплаты наиболее простым и безопасным. Безналичная оплата осуществляется с помощью сервиса ЮKassa, размещённого на сайте <a href="https://yookassa.ru/" target="_blank" class="text-primary">https://yookassa.ru/</a></p>
+                    </div>
+                    <div class="payment-block d-flex align-items-center">
+                        <div class="payment-block__item"><img src="img/mir-dark.svg" alt="" class="img-fluid"></div>
+                        <div class="payment-block__item"><img src="img/visa-dark.svg" alt="" class="img-fluid"></div>
+                        <div class="payment-block__item"><img src="img/mastercard-dark.svg" alt="" class="img-fluid"></div>
+                    </div>
+                    <div class="title_size-smd return__title text-semibold_md">Кредитная карта</div>
                     <div class="col-md-11 col-lg-12">
-                        <p>Мы благодарим вас за вашу покупку. Мы надеемся, что вы довольны своим приобретением и хотим убедиться, что предоставляем вам лучшие условия для совершения покупок. Если вы по какой-либо причине не полностью удовлетворены приобретенным вам товаром, вы можете вернуть его и получить либо возврат потраченных денежных средств, либо обменять товар на другой. Ниже вы можете ознакомиться с нашей Политикой Возврата.</p>
+                        <p>Оплата кредитной картой в интернете считается одним из наиболее стандартных и безопасных способов оплаты. Мы принимаем карты Visa / MasterCard / МИР. Чтобы воспользоваться этим методом оплаты, на странице оплаты введите данные своей кредитной карты, срок действия карты и трехзначный код безопасности (на обратной стороне карты). Оплата будет осуществлена моментально, и мы сразу же начнем выполнять ваш заказ.</p>
+                        <p>Предоставляемая Вами персональная информация (имя, адрес, телефон, e-mail, номер кредитной карты) является конфиденциальной и не подлежит разглашению. Данные Вашей кредитной карты передаются только в зашифрованном виде и не сохраняются на нашем Web-сервере.</p>
+                        <p>Все операции с платежными картами происходят в соответствии с требованиями VISA International, MasterCard и других платежных систем. При передаче информации используется специальные технологии безопасности карточных онлайн-платежей, обработка данных ведется на безопасном высокотехнологичном сервере процессинговой компании.</p>
                     </div>
-                    <div class="info-text bg-dark d-flex"><span class="icon icon-info"></span>Мы возмещаем стоимость товара, если вы правильно оформили возврат!</div>
-                    <div class="col-md-11">
-                        <p>Если вы не полностью довольны вашей покупкой, мы предлагаем вам возможность его нам вернуть в течение 14 календарных дней с момента получения вами товара по указанному адресу доставки. Вы должны проинформировать нас в течение 14 дней с момента получения вами товара по адресу доставки. По соглашению, вы должны вернуть товар нам в течение последующих 14 дней. Затраты клиента на возврат товара не компенсируются.
-                        <br>Товар должен быть возвращен в том виде, в котором он был вам прислан, в упаковке, запечатанный, неиспользованный и не поврежденный (если применимо), то есть в состоянии, в котором его можно вновь продать. Некоторые портящиеся виды товаров, например, еда и пищевые добавки, не могут быть приняты к возврату, исходя из безопасности клиентов.
-                        <br>Если вы хотите вернуть товар, пожалуйста свяжитесь с нашей командой Службы Поддержки Клиентов. Товар может быть возвращен только после согласования с членом нашей команды.</p>
-                    </div>
-                    <div class="info-text info-text_margin-mobile bg-light text-primary d-flex"><span class="icon icon-info-primary"></span>Для оформления возврата нам необходим чек или доказательство совершения покупки.</div>
-                    <div class="title_size-smd return__title">Адрес для возврата товаров:</div>
-                    <p>
-                        ООО "СИБИДИ РУ"
-                        <br>115114, Г. Москва, вн.тер. г. Муниципальный Округ Даниловский, пер 1-Й Кожевнический, дом 6, строение 6, этаж 1, пом/оф III/21
-                        <br>Пожалуйста, не возвращайте нам товар без предварительного согласования с членом нашей команды Службы Поддержки Клиентов.
-                        <br>Что делать с поврежденным товаром?
-                        <br>Если товар поврежден, мы с радостью вышлем вам замену, после того как поврежденный товар будет нами получен и проверен. Пожалуйста, свяжитесь с нашей командой Службы Поддержки Клиентов и вышлите фото поврежденной упаковки и товара в ней.
-                    </p>
-                    <div class="title_size-smd return__title return__title_margin">Вопросы</div>
+                    <div class="title_size-smd delivery__title_main text-semibold_md">Вопросы</div>
                     <div class="faq-item">
                         <a href="#faq-1" class="faq-item__link text_size-md text-semibold collapsed" data-bs-toggle="collapse">Как отказаться от совершенной покупки?</a>
                         <div class="collapse" id="faq-1">
