--- a/CBD/stock.html
+++ b/CBD/stock.html
@@ -21,7 +21,7 @@
                         <span class="btn-menu__item"></span>
                         <span class="btn-menu__item"></span>
                     </a>
-                    <a href="/" class="logo header__logo">
+                    <a href="index.html" class="logo header__logo">
                         <img src="img/logo.svg" alt="" class="img-fluid hidden-inversion">
                         <img src="img/logo-inversion.svg" alt="" class="img-fluid visible-inversion">
                     </a>
@@ -46,7 +46,7 @@
                             <span class="icon icon-basket"><span class="icons-nav__count">3</span></span>
                             <div class="icons-nav__text d-lg-none">Корзина</div>
                         </a>
-                        <a href="favorite.html" class="icons-nav__link">
+                        <a href="favorites.html" class="icons-nav__link">
                             <span class="icon icon-favorite"></span>
                             <div class="icons-nav__text d-lg-none">Избранное</div>
                         </a>
@@ -137,7 +137,7 @@
                             <div class="stock-item__title title_size-sm">Скидка за отзыв на Яндекс.Маркет</div>
                             <div class="stock-item__sale percent-value percent-value_danger stock-item__sale_margin stock-item__sale_size-md-tablet">-15%</div>
                         </div>
-                        <div class="stock-item__period stock-item__period_primary tag__marker">Весь апрель</div>
+                        <div class="stock-item__period tag__marker_primary tag__marker">Весь апрель</div>
                     </div>
                 </a>
                 <a href="#" class="stock-item stock-item_secondary" data-tag="#bonus">
@@ -148,7 +148,7 @@
                                 Рождения</div>
                             <div class="stock-item__sale percent-value">-15%</div>
                         </div>
-                        <div class="stock-item__period stock-item__period_secondary tag__marker">7 дней до – 7 дней после</div>
+                        <div class="stock-item__period tag__marker_secondary tag__marker">7 дней до – 7 дней после</div>
                     </div>
                 </a>
             </div>
@@ -203,10 +203,10 @@
                         <a href="#footer-nav-1" class="footer__title" data-bs-toggle="collapse">Продукция</a>
                         <div class="show collapse footer-nav__wrap" id="footer-nav-1">
                             <ul class="footer-nav">
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Каталог</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Бренды</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Акции</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Калькулятор дозировки </a></li>
+                                <li class="footer-nav__item"><a href="catalogue.html" class="footer-nav__link">Каталог</a></li>
+                                <li class="footer-nav__item"><a href="brands.html" class="footer-nav__link">Бренды</a></li>
+                                <li class="footer-nav__item"><a href="stock.html" class="footer-nav__link">Акции</a></li>
+                                <li class="footer-nav__item"><a href="calculator.html" class="footer-nav__link">Калькулятор дозировки </a></li>
                             </ul>
                         </div>
                     </div>
@@ -214,9 +214,9 @@
                         <a href="#footer-nav-2" class="footer__title collapsed" data-bs-toggle="collapse">Информация</a>
                         <div class="collapse footer-nav__wrap" id="footer-nav-2">
                             <ul class="footer-nav">
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">О нас</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Партнерская программа</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Отзывы</a></li>
+                                <li class="footer-nav__item"><a href="about.html" class="footer-nav__link">О нас</a></li>
+                                <li class="footer-nav__item"><a href="partners.html" class="footer-nav__link">Партнерская программа</a></li>
+                                <li class="footer-nav__item"><a href="reviews.html" class="footer-nav__link">Отзывы</a></li>
                                 <li class="footer-nav__item"><a href="#" class="footer-nav__link">Авторские права</a></li>
                             </ul>
                         </div>
@@ -225,10 +225,10 @@
                         <a href="#footer-nav-3" class="footer__title collapsed" data-bs-toggle="collapse">Новости и статьи</a>
                         <div class="collapse footer-nav__wrap" id="footer-nav-3">
                             <ul class="footer-nav">
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Блог</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">О CBD</a></li>
+                                <li class="footer-nav__item"><a href="blog.html" class="footer-nav__link">Блог</a></li>
+                                <li class="footer-nav__item"><a href="about-cbd.html" class="footer-nav__link">О CBD</a></li>
                                 <li class="footer-nav__item"><a href="#" class="footer-nav__link">Справочник</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Вопросы </a></li>
+                                <li class="footer-nav__item"><a href="faq.html" class="footer-nav__link">Вопросы </a></li>
                             </ul>
                         </div>
                     </div>
@@ -236,8 +236,8 @@
                         <a href="#footer-nav-4" class="footer__title collapsed" data-bs-toggle="collapse">Помощь</a>
                         <div class="collapse footer-nav__wrap" id="footer-nav-4">
                             <ul class="footer-nav">
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Возврат и замена</a></li>
-                                <li class="footer-nav__item"><a href="#" class="footer-nav__link">Доставка и оплата</a></li>
+                                <li class="footer-nav__item"><a href="return.html" class="footer-nav__link">Возврат и замена</a></li>
+                                <li class="footer-nav__item"><a href="delivery.html" class="footer-nav__link">Доставка и оплата</a></li>
                                 <li class="footer-nav__item"><a href="#" class="footer-nav__link">Политика конфиденциальности</a></li>
                                 <li class="footer-nav__item"><a href="#" class="footer-nav__link">Пользовательское соглашение</a></li>
                                 <li class="footer-nav__item"><a href="#" class="footer-nav__link">Отказ от ответственности</a></li>
@@ -267,7 +267,7 @@
             <div class="footer__bottom">
                 <div class="container">
                     <div class="d-md-flex justify-content-between">
-                        <a href="/" class="logo footer__logo d-none d-lg-block"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
+                        <a href="index.html" class="logo footer__logo d-none d-lg-block"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
                         <div class="payment d-flex align-items-center">
                             <div class="payment__item"><img src="img/mir.svg" alt="" class="img-fluid"></div>
                             <div class="payment__item"><img src="img/visa.svg" alt="" class="img-fluid"></div>
@@ -318,7 +318,7 @@
             <a href="#" class="icon icon-close basket-pane__close pane-close d-none d-lg-block"></a>
             <div class="title_size-md text-semibold basket-pane__title">Корзина <span class="basket-pane__count text_size-sm text-light text-medium">3 товара</span></div>
             <!-- basket-item -->
-            <div class="basket-item d-flex">
+            <div class="basket-item d-flex remove-item">
                 <a href="item.html" class="basket-item__image"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
                 <div class="basket-item__content">
                     <div class="d-flex justify-content-between">
@@ -348,7 +348,7 @@
             </div>
             <!-- /basket-item -->
             <!-- basket-item -->
-            <div class="basket-item d-flex">
+            <div class="basket-item d-flex remove-item">
                 <a href="item.html" class="basket-item__image"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
                 <div class="basket-item__content">
                     <div class="d-flex justify-content-between">
@@ -378,7 +378,7 @@
             </div>
             <!-- /basket-item -->
             <!-- basket-item -->
-            <div class="basket-item d-flex">
+            <div class="basket-item d-flex remove-item">
                 <a href="item.html" class="basket-item__image"><img src="img/content/item-1.jpg" alt="" class="img-fluid"></a>
                 <div class="basket-item__content">
                     <div class="d-flex justify-content-between">
@@ -433,39 +433,57 @@
             <p>Рассчитайте свою дозировку КБД основываясь на весе вашего тела и цели использования с нашей формой расчета дозировки.</p>
             <form action="#" class="calculator-pane__form">
                 <div class="form-group">
-                    <label class="label">Недуг</label>
-                    <select name="disease" id="disease" class="form-control">
+                    <label class="label label_md">Недуг</label>
+                    <select name="disease" id="disease" class="form-control form-control_md">
                         <option value="Биполярное расстройство">Биполярное расстройство</option>
                         <option value="Биполярное расстройство">Биполярное расстройство</option>
                         <option value="Биполярное расстройство">Биполярное расстройство</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="label">Форма</label>
-                    <select name="disease" id="disease" class="form-control">
+                    <label class="label label_md">Форма</label>
+                    <select name="disease" id="disease" class="form-control form-control_md">
                         <option value="Легкая">Легкая</option>
                         <option value="Средняя">Средняя</option>
                         <option value="Тяжелая">Тяжелая</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="label">Вес</label>
+                    <label class="label label_md">Вес</label>
                     <div class="wrap-range">
                         <div class="d-flex">
-                            <input type="text" class="range-value" id="mass-range-value" readonly>
+                            <input type="text" class="range-value" id="mass-range-value" readonly="">
                         </div>
-                        <div id="mass-range"></div>
+                        <div id="mass-range" class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"><div class="ui-slider-range ui-corner-all ui-widget-header ui-slider-range-min" style="width: 24.5455%;"></div><span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 24.5455%;"></span></div>
                     </div>
                 </div>
-                <div class="form-group_margin-md">
-                    <label class="label">E-mail для консультации</label>
-                    <input type="email" class="form-control" placeholder="grisha@yandex.ru">
+                <div class="form-group_margin-sm pb-2 pb-lg-0">
+                    <label class="label label_md">E-mail для консультации</label>
+                    <input type="email" class="form-control form-control_md" placeholder="grisha@yandex.ru">
+                </div>
+                <div class="d-none d-lg-block">
+                    <div class="form-group">
+                        <p class="text-semibold mb-3">Хотите ли вы преобразовать результат дозировки CBD в капли основываясь на объёме и содержании CBD в вашем продукте?</p>
+                        <label class="radio-label d-flex align-items-center"><input type="radio" name="check" class="form-radio-input">Нет</label>
+                        <label class="radio-label d-flex align-items-center"><input type="radio" name="check" class="form-radio-input" checked="">Да</label>
+                    </div>
+                    <div class="form-group pt-1">
+                        <label class="label label_md">Каков общий объем в мл вашего продукта CBD?</label>
+                        <input type="text" class="form-control form-control_md form-control_primary" value="30 ml">
+                    </div>
+                    <div class="form-group_margin-md">
+                        <label class="label label_md">Каково общее количество CBD в продукте в миллиграммах?</label>
+                        <input type="text" class="form-control form-control_md form-control_primary" value="1800 mg">
+                    </div>
                 </div>
                 <div class="form-group_margin-md form-group_margin-md-tablet">
-                    <button class="btn btn-dark w-100">Произвести рассчет</button>
+                    <button class="btn btn-dark w-100">
+                        <span class="d-none d-lg-block">Получить расчет дозировки</span>
+                        <span class="d-lg-none">Произвести расчет</span>
+                    </button>
                 </div>
-                <div class="form-group d-flex col-xl-10">
-                    <input type="checkbox" class="form-check-input" checked>
+                <div class="d-flex">
+                    <input type="checkbox" class="form-check-input" checked="">
                     <p class="text_size-xs">Нажимая на кнопку, я принимаю условия <a href="#" class="text-light">пользовательского соглашения</a>.</p>
                 </div>
             </form>
